# TestSmartPointers

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
RawPointersTest/include/: Assembly.h  DataStorage.h  Part.h  Utility.h
RawPointersTest/src/: Assembly.cpp  DataStorage.cpp  HasID.cpp  Part.cpp
SmartPointersTest/include/: DataStorage.h  HasID.h
SmartPointersTest/src/: Assembly.cpp  DataStorage.cpp  Part.cpp  Utility.cpp  main.cpp
include/: Assembly.h  DataStorage.h  Part.h
src/: DataStorage.cpp  main.cpp
